--- a/product_lists.html
+++ b/product_lists.html
@@ -339,41 +339,41 @@
                     <div class="accordion" id="accordionExample">
                         <a href="" class="pull-right clse">X</a>
                         <div class="card">
-                            <div class="card-header" id="headingOne">
+                            <div class="card-header" id="headingFour">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        Near By Location
+                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapseOne">
+                                        Category
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapseOne" class="collapse in" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div id="collapseOne" class="collapse in" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
-                                        <li> <input type="checkbox" id="fruit1" name="fruit-1" value="Apple"><label for="fruit1">Westmambalam</label></li>
-                                        <li> <input type="checkbox" id="fruit2" name="fruit-1" value="Apple"><label for="fruit2">Ashokpillar</label></li>
-                                        <li> <input type="checkbox" id="fruit3" name="fruit-1" value="Apple"><label for="fruit3">Ashoknagar</label></li>
-                                        <li> <input type="checkbox" id="fruit4" name="fruit-1" value="Apple"><label for="fruit4">Kodambakkam</label></li>
-
+                                        <li> <input type="checkbox" id="fruit16" name="fruit-1" value="Apple"><label for="fruit16">Mobile Phones</label></li>
+                                        <li> <input type="checkbox" id="fruit18" name="fruit-1" value="Apple"><label for="fruit18">Mobile Phone Repair</label></li>
+                                        <li> <input type="checkbox" id="fruit19" name="fruit-1" value="Apple"><label for="fruit19">Mobile Phone Accessories</label></li>
+                                        <li class="vwmre"> <a href="">View more category</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
-                            <div class="card-header" id="headingTwo">
+                            <div class="card-header" id="headingThree">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Distance
+                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
+                                        Brand
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapseTwo" class="collapse in" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                            <div id="collapseTwo" class="collapse in" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
-                                        <li> <input type="checkbox" id="fruit6" name="fruit-1" value="Apple"><label for="fruit6">Bird's-eye View</label></li>
-                                        <li> <input type="checkbox" id="fruit7" name="fruit-1" value="Apple"><label for="fruit7">Driving (5 mi.)</label></li>
-                                        <li> <input type="checkbox" id="fruit8" name="fruit-1" value="Apple"><label for="fruit8">Biking (2 mi.)</label></li>
-                                        <li> <input type="checkbox" id="fruit9" name="fruit-1" value="Apple"><label for="fruit9">Walking (1 mi.)</label></li>
-                                        <li> <input type="checkbox" id="fruit10" name="fruit-1" value="Apple"><label for="fruit10">Within 4 blocks</label></li>
+                                        <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">Intex<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit12" name="fruit-1" value="Apple"><label for="fruit12">Samsung<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit13" name="fruit-1" value="Apple"><label for="fruit13">Micromax<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit14" name="fruit-1" value="Apple"><label for="fruit14">Nokia<span class="pull-right">(10)</span></label> </li>
+                                        <li> <input type="checkbox" id="fruit15" name="fruit-1" value="Apple"><label for="fruit15">Apple<span class="pull-right">(10)</span></label>  </li>
                                     </ul>
                                 </div>
                             </div>
@@ -399,21 +399,92 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card-header" id="headingFour">
+                            <div class="card-header" id="headingThree">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                                        Category
+                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                                        Screen size
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapsefour" class="collapse in" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
-                                        <li> <input type="checkbox" id="fruit16" name="fruit-1" value="Apple"><label for="fruit16">Mobile Phones</label></li>
-                                        <li> <input type="checkbox" id="fruit17" name="fruit-1" value="Apple"><label for="fruit17">Shopping</label></li>
-                                        <li> <input type="checkbox" id="fruit18" name="fruit-1" value="Apple"><label for="fruit18">Mobile Phone Repair</label></li>
-                                        <li> <input type="checkbox" id="fruit19" name="fruit-1" value="Apple"><label for="fruit19">Mobile Phone Accessories</label></li>
-                                        <li class="vwmre"> <a href="">View more category</a></li>
+                                        <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">4 Inch <span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit12" name="fruit-1" value="Apple"><label for="fruit12">5 Inch<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit13" name="fruit-1" value="Apple"><label for="fruit13">6 Inch<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit14" name="fruit-1" value="Apple"><label for="fruit14">7 Inch<span class="pull-right">(10)</span></label> </li>
+                                        <li> <input type="checkbox" id="fruit15" name="fruit-1" value="Apple"><label for="fruit15">8 Inch<span class="pull-right">(10)</span></label>  </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                                        Operating system
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseFive" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <ul>
+                                        <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">Android<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit12" name="fruit-1" value="Apple"><label for="fruit12">I OS<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit13" name="fruit-1" value="Apple"><label for="fruit13">Blackberry OS<span class="pull-right">(10)</span></label></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+                                        Screen resolution
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseSix" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <ul>
+                                        <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">1028 * 768<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit12" name="fruit-1" value="Apple"><label for="fruit12">1280 * 940<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit13" name="fruit-1" value="Apple"><label for="fruit13">1920 * 1360<span class="pull-right">(10)</span></label></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseThree">
+                                        Sim
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseSeven" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <ul>
+                                        <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">1 sim<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit12" name="fruit-1" value="Apple"><label for="fruit12">2 sim<span class="pull-right">(10)</span></label></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseThree">
+                                        Color
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseEight" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <ul>
+                                        <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">Black<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit12" name="fruit-1" value="Apple"><label for="fruit12">Golden<span class="pull-right">(10)</span></label></li>
+                                        <li> <input type="checkbox" id="fruit13" name="fruit-1" value="Apple"><label for="fruit13">Blue<span class="pull-right">(10)</span></label></li>
                                     </ul>
                                 </div>
                             </div>
