--- a/shops.html
+++ b/shops.html
@@ -399,7 +399,7 @@
                                         <li> <input type="checkbox" id="fruit16" name="fruit-1" value="Apple"><label for="fruit16">Mobile Phones</label></li>
                                         <li> <input type="checkbox" id="fruit17" name="fruit-1" value="Apple"><label for="fruit17">Shopping</label></li>
                                         <li> <input type="checkbox" id="fruit18" name="fruit-1" value="Apple"><label for="fruit18">Mobile Phone Repair</label></li>
-                                        <li> <input type="checkbox" id="fruit19" name="fruit-1" value="Apple"><label for="fruit19">Mobile Phone Accessories</label></li>
+                                        <li> <input type="checkbox" id="fruit19" name="fruit-1" value="Apple"><label for="fruit19"> Accessories</label></li>
                                         <li class="vwmre"> <a href="">View more category</a></li>
                                     </ul>
                                 </div>
@@ -471,11 +471,11 @@
                         </div>
                         <div class="row mt25">
                             <div class="col-md-4 col-xs-12">
-                                <img src="images/Product-1.jpg" class="img-responsive">
+                                <img src="images/Product-2.jpg" class="img-responsive">
                             </div>
                             <div class="col-md-7 col-xs-12">
                                 <div class="row">
-                                    <h3 class="pad_mar_0 title">1. first section</h3>
+                                    <h3 class="pad_mar_0 title">2. Dyson store</h3>
                                     <div class="adrs mt10">
                                         <p><i class="icon-map-marker"></i>  Lorem ipsum, or lipsum as it is sometimes known | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>  Lorem ipsum, or lipsum as it is sometimes known  <a href="#"> <i class="icon-link"></i> yourlink</a></p>
@@ -492,11 +492,11 @@
                         </div>
                         <div class="row mt25">
                             <div class="col-md-4 col-xs-12">
-                                <img src="images/Product-1.jpg" class="img-responsive">
+                                <img src="images/Product-3.jpg" class="img-responsive">
                             </div>
                             <div class="col-md-7 col-xs-12">
                                 <div class="row">
-                                    <h3 class="pad_mar_0 title">1. first section</h3>
+                                    <h3 class="pad_mar_0 title">3. Amazon store</h3>
                                     <div class="adrs mt10">
                                         <p><i class="icon-map-marker"></i>  Lorem ipsum, or lipsum as it is sometimes known | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>  Lorem ipsum, or lipsum as it is sometimes known  <a href="#"> <i class="icon-link"></i> yourlink</a></p>
@@ -525,11 +525,11 @@
 
                         <div class="row mt25">
                             <div class="col-md-4 col-xs-12">
-                                <img src="images/Product-1.jpg" class="img-responsive">
+                                <img src="images/Product-4.jpg" class="img-responsive">
                             </div>
                             <div class="col-md-7 col-xs-12">
                                 <div class="row">
-                                    <h3 class="pad_mar_0 title">1. first section</h3>
+                                    <h3 class="pad_mar_0 title">4. Ebay store</h3>
                                     <div class="adrs mt10">
                                         <p><i class="icon-map-marker"></i>  Lorem ipsum, or lipsum as it is sometimes known | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>  Lorem ipsum, or lipsum as it is sometimes known  <a href="#"> <i class="icon-link"></i> yourlink</a></p>
